# NewsFlash

./: CMakeLists.txt  README.md  config.hpp  index.cpp  run.txt
include/env/: dot_env.h
include/logger/: loggand.hpp
src/: newsModel.hpp  utils.hpp
